test/integration/semantic/operations_with_consts.pal
{9}
program opsWithScalars(in, out);
type
	list = (one,two,three);
var
	a : list;
begin
	a := one;
	two := three;	// error
end.
